--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  <title>Frontend Mentor | Sunnyside agency landing page</title>
+  <title>Ngoako Masekela | Sunnyside agency landing page</title>
   <link rel="stylesheet" href="style.css">
   <script src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
   <link href="https://fonts.googleapis.com/css2?family=Merienda&display=swap" rel="stylesheet">
